@@ -1,2 +1,0 @@
-[alert]
-#alert-dir=/var/spool/uhuru
