@@ -1,0 +1,2 @@
+[alert]
+alert-dir=@localstatedir@/spool/uhuru
