@@ -1,3 +1,7 @@
+2015-02-24  François  <francois@dechelle.net>
+
+	* added quarantine implementation; tested
+
 2015-02-19  François  <francois@dechelle.net>
 
 	* changed modules scan function in order to pass file mime type, so that modules can make scan decisions based on mime-type
